# pure-paste

./: AGENTS.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: tauri-packages.yml
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  desktop.rs  lib.rs  main.rs  models.rs
src/components/: ConfirmClearDialog.jsx  CopyToast.jsx
src/components/icons/: CopyIcon.jsx
src/hooks/: useClipboardController.js  useErrorMessage.js  useSettingsController.js
src/lib/: constants.js  shortcut.js  types.js  url.js
src/tauri/: clipboardCommands.js  invoke.js  settingsCommands.js
src/views/: MainView.jsx  SettingsView.jsx
